<resources>
    <string name="app_name">lab1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_signals_strength_list">Signal Strength</string>
    <string name="title_user_edit">Edit User</string>
    <string name="title_user_add">Add User</string>
</resources>