<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lab1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.lab1.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.lab1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_signal_strength_list"
        android:name="com.example.lab1.ui.signalstrengthlist.Signal_strength_list"
        android:label="@string/title_signals_strength_list"
        tools:layout="@layout/fragment_signal_strength_list" >
        <action
            android:id="@+id/action_list_to_edit"
            app:destination="@id/navigation_user_edit" />
        <action
            android:id="@+id/action_navigation_signal_strength_list_to_navigation_user_add"
            app:destination="@id/navigation_user_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_edit"
        android:name="com.example.lab1.ui.UserEdit.UserEdit"
        android:label="@string/title_user_edit"
        tools:layout="@layout/fragment_user_edit" />

    <fragment
        android:id="@+id/navigation_user_add"
        android:name="com.example.lab1.ui.UserAdd.UserAdd"
        android:label="@string/title_user_add"
        tools:layout="@layout/fragment_user_add" />
</navigation>